# Brainy

./: .replit  README.md  pyproject.toml  server.py
modules/: config.py  functions.py
static/css/: dashboard.css  index.css  style.css
static/js/: dashboard.js  surveys.js
templates/: 404.html  index.html  login.html  nav.html  signup.html
templates/help/: code.html  docs.html
templates/survey/: dashboard.html  script.js  surveys.html
